[package]
name = "moxen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.30"
glob = "0.3.1"
serde = { version = "1.0.204", features = ["derive"] }
tar = "0.4.41"
tempdir = "0.3.7"
tokio = { version = "1.38.1", features = ["full"] }
toml = "0.8.15"
