[package]
name = "moxen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.30"
glob = "0.3.1"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["json"] }
ring = "0.17.8"
rustrict = "0.7.26"
serde = { version = "1.0.204", features = ["derive"] }
sha1 = "0.10.6"
tar = "0.4.41"
tokio = { version = "1.38.1", features = ["full"] }
toml = "0.8.15"
